images and more coding

--- a/index.html
+++ b/index.html
@@ -36,16 +36,29 @@
     	<section id="portfolio">
             <h2>Full Stack Developer</h2>
                 <p>In progress</p>
-            
-            <h3>Baan ERP Senior Programmer / Analyst</h3> 
-                <p>In progress</p>     
-
+            <section id="column">
+                <p>A Bonzo Moment</p>
+                <a href="./assets/images/index.html"><img src="./assets/images/220pxJB75.jpg">One of the Greatest Drummers!</a>
+                <p>My First site.</p>
+            </section>
+            <section id="column">
+                <p>A Refactored Site</p>
+                <p>
+                    The pain itself is the key to the game. No, the labor itself? Our body, however, was very small and detached to a similar object which was therefore extremely painful. His mind is blinded by the annoyance of accusing him of truth.</p>
+                </section>
+            <section id="column">
+                <p>A Landing Page</p>
+                <p>The pain itself is the key to the game. No, the labor itself? Our body, however, was very small and detached to a similar object which was therefore extremely painful. His mind is blinded by the annoyance of accusing him of truth.</p>
+            </section>            
+            <!-- <h3>Baan ERP Senior Programmer / Analyst</h3> 
+                <p>In progress</p> -->    
         </section>	
         <section id="contact">
             <form>
+                <h4>Contact Me</h4>
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="Name">
-                <label for="name">Email:</label>
+                <label for="email">Email:</label>
                 <input type="text" id="email" name="Email">
                 <label for="message">Message:</label>
                 <textarea name="message"></textarea>
@@ -54,7 +67,7 @@
         </section>
 	</main>    
     <footer>
-
+        <h5>©Step Up Productions Inc.</h5>
     </footer>
 
 </body>
