Current Completed Project

--- a/index.html
+++ b/index.html
@@ -11,49 +11,46 @@
 </head>
 
 <body>
-    	<header>
-            <h1>Phil Tantsidis</h1> 
-            <nav>
-                <!-- <h2>What have you done, Phil?</h2> -->
-                <ul>
-                    <li><a href="#aboutme">About Me</a></li> 
-                    <li><a href="#portfolio">Portfolio</a></li> 
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-    	</header>
+    <header>
+        <h1>Phil Tantsidis</h1> 
+        <nav>
+            <!-- <h2>What have you done, Phil?</h2> -->
+            <ul>
+                <li><a href="#aboutme">About Me</a></li> 
+                <li><a href="#portfolio">Portfolio</a></li> 
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 	<main>
         <section id="about">
             <h2>About Me</h2>
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, laborum ipsam? Corporis nobis autem soluta minima similique asperiores itaque rem quas. Molestiae est obcaecati animi sit eius vero accusantium eum.
-            </div>
-            <div>
-                <img src="./assets/test.jpg" alt="lovely me"/>
+                <img src="./assets/images/3551739.jpg"style="width:300px;height:300px"class="center"></a>
+                <!-- >Man vector created by pikisuperstar - www.freepik.com' -->
             </div>    
-            </p>
-        </section>
-    	<section id="portfolio">
-            <h2>Full Stack Developer</h2>
-                <p>In progress</p>
-            <section id="column">
-                <p>A Bonzo Moment</p>
-                <a href="./assets/images/index.html"><img src="./assets/images/220pxJB75.jpg">One of the Greatest Drummers!</a>
-                <p>My First site.</p>
-            </section>
-            <section id="column">
-                <p>A Refactored Site</p>
-                <p>
-                    The pain itself is the key to the game. No, the labor itself? Our body, however, was very small and detached to a similar object which was therefore extremely painful. His mind is blinded by the annoyance of accusing him of truth.</p>
-                </section>
-            <section id="column">
-                <p>A Landing Page</p>
+            <div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, laborum ipsam? Corporis nobis autem soluta minima similique asperiores itaque rem quas. Molestiae est obcaecati animi sit eius vero accusantium eum. </p>
                 <p>The pain itself is the key to the game. No, the labor itself? Our body, however, was very small and detached to a similar object which was therefore extremely painful. His mind is blinded by the annoyance of accusing him of truth.</p>
+            </div> 
+        </section>
+        <h2>Full Stack Developer</h2>
+        <p>In progress</p>
+    	<section id="portfolio">        
+            <section class="column">
+                <h3>My First Page</h3>
+                <a href="./assets/images/index.html"><img src="./assets/images/220pxJB75.jpg" class="image1" alt = "My First Page"></a>
+            </section>
+            <section class="column">
+                <h3>A Refactored Site</h3>
+                <a href="https://ptantsidis.github.io/Refactor2/"><img src="./assets/images/refactor_pic.png" class="image" alt="Refactor Page"></a>   
+            </section>
+            <section class="column">
+                <h3>A Landing Page</h3>
+                <a href="https://ptantsidis.github.io/Landing-Page/"><img src="./assets/images/landing_page.png"class="image" alt = "Landing Page"></a>  
             </section>            
-            <!-- <h3>Baan ERP Senior Programmer / Analyst</h3> 
-                <p>In progress</p> -->    
         </section>	
-        <section id="contact">
+        <section id="contact"> 
             <form>
                 <h4>Contact Me</h4>
                 <label for="name">Name:</label>
@@ -71,5 +68,4 @@
     </footer>
 
 </body>
-
 </html>
