some additional sites

--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
     <link rel="reset" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <!-- Update Title -->
-    <title>"Phil Tantsidis Portfolio"</title>
+    <title>Phil Tantsidis Full Stack Developer</title>
 </head>
 
 <body>
     <header>
         <h1>Phil Tantsidis</h1> 
         <nav>
-            <!-- <h2>What have you done, Phil?</h2> -->
-            <ul>
+                 <ul>
                 <li><a href="#aboutme">About Me</a></li> 
                 <li><a href="#portfolio">Portfolio</a></li> 
                 <li><a href="#contact">Contact</a></li>
@@ -30,8 +29,8 @@
                 <!-- >Man vector created by pikisuperstar - www.freepik.com' -->
             </div>    
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, laborum ipsam? Corporis nobis autem soluta minima similique asperiores itaque rem quas. Molestiae est obcaecati animi sit eius vero accusantium eum. </p>
-                <p>The pain itself is the key to the game. No, the labor itself? Our body, however, was very small and detached to a similar object which was therefore extremely painful. His mind is blinded by the annoyance of accusing him of truth.</p>
+                <p>Full Stack Developer with HTML, JavaScript, CSS, JQuery, Bootstrap, and API skills. </p>
+                <p>With many years of Systems Analysis and Programming in proprietary languages this becomes a well rounded technical expert. </p>
             </div> 
         </section>
         <h2>Full Stack Developer</h2>
@@ -50,6 +49,23 @@
                 <a href="https://ptantsidis.github.io/Landing-Page/"><img src="./assets/images/landing_page.png"class="image" alt = "Landing Page"></a>  
             </section>            
         </section>	
+        <row class = "as-we-grow">
+            <h3>As we grow!</h3>
+            <section id="more-portfolio">        
+                <section class="column">
+                    <h3>Quiz Game</h3>
+                    <a href="https://ptantsidis.github.io/scriptQuiz/"><img src="./assets/images/quiz_screen.png" class="image4" alt = "Quiz Game"></a>
+                </section>
+                <section class="column">
+                    <h3>Appointments</h3>
+                    <a href="https://ptantsidis.github.io/Appointments/"><img src="./assets/images/AppointmentScreenShot.png" class="image5" alt="Appoinments"></a>   
+                </section>
+                <section class="column">
+                    <h3>WeatherBoard</h3>
+                    <a href="https://ptantsidis.github.io/WeatherBoard/"><img src="./assets/images/WeatherBoardPic.png"class="image6" alt = "Landing Page"></a>  
+                </section>            
+            </section>	
+        </row>
         <section id="contact"> 
             <form>
                 <h4>Contact Me</h4>
@@ -59,13 +75,16 @@
                 <input type="text" id="email" name="Email">
                 <label for="message">Message:</label>
                 <textarea name="message"></textarea>
-                <button type="submit" value="Send">Submit</button>
+                <button id="submit" value="Send">Submit</button>
             </form>
         </section>
 	</main>    
     <footer>
         <h5>©Step Up Productions Inc.</h5>
     </footer>
-
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
