--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="reset" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <!-- Update Title -->
@@ -12,60 +12,77 @@
 
 <body>
     <header>
-        <h1>Phil Tantsidis</h1> 
+        <h1>Phil Tantsidis</h1>
         <nav>
-                 <ul>
-                <li><a href="#aboutme">About Me</a></li> 
-                <li><a href="#portfolio">Portfolio</a></li> 
+            <ul>
+                <li><a href="#aboutme">About Me</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
-	<main>
-        <section id="about">
+    <main>
+        <section class="container">
             <h2>About Me</h2>
-            <div>
-                <img src="./assets/images/3551739.jpg"style="width:300px;height:300px"class="center"></a>
-                <!-- >Man vector created by pikisuperstar - www.freepik.com' -->
-            </div>    
-            <div>
-                <p>Full Stack Developer with HTML, JavaScript, CSS, JQuery, Bootstrap, and API skills. </p>
-                <p>With many years of Systems Analysis and Programming in proprietary languages this becomes a well rounded technical expert. </p>
-            </div> 
+            <container class="about-me">
+                <div class="left-align">
+                    <img src="./assets/images/phil_photo2.png" class="left"></a>
+                </div>
+                <ul class="right-align">
+                    <li>Full Stack Developer with HTML, JavaScript, CSS, JQuery, Bootstrap, SQL and API skills. </li>
+                    <li>Baan LN Infor, BOI, DDC, supply chain, manufacturing, master data integration, security, development,
+                        administrative, training, implementation and consulting.</li> 
+                    <li>Specializing in Aerospace and Defense with experience in automotive, and nutraceuticals.</li>
+                    <li>With many years of Systems Analysis and Programming in proprietary languages this becomes a well
+                        experienced technical expert. </li>
+                </ul>
+            </container>    
         </section>
+        <section class="container">
         <h2>Full Stack Developer</h2>
-    	<section id="portfolio">        
+       </section>
+        <section id="portfolio">
+
             <section class="column">
                 <h3>My First Page</h3>
-                <a href="./assets/images/index.html"><img src="./assets/images/220pxJB75.jpg" class="image1" alt = "My First Page"></a>
+                <a href="./assets/images/bonham.html"><img src="./assets/images/220pxJB75.jpg" class="image1"
+                        alt="My First Page"></a>
             </section>
             <section class="column">
                 <h3>A Refactored Site</h3>
-                <a href="https://ptantsidis.github.io/Refactor2/"><img src="./assets/images/refactor_pic.png" class="image" alt="Refactor Page"></a>   
+                <a href="https://ptantsidis.github.io/Refactor2/"><img src="./assets/images/refactor_pic.png"
+                        class="image" alt="Refactor Page"></a>
             </section>
             <section class="column">
                 <h3>A Landing Page</h3>
-                <a href="https://ptantsidis.github.io/Landing-Page/"><img src="./assets/images/landing_page.png"class="image" alt = "Landing Page"></a>  
-            </section>            
-        </section>	
-        <row class = "as-we-grow">
+                <a href="https://ptantsidis.github.io/Landing-Page/"><img src="./assets/images/landing_page.png"
+                        class="image" alt="Landing Page"></a>
+            </section>
+        </section>
+        <row class="as-we-grow">
             <h3>As we grow!</h3>
-            <section id="more-portfolio">        
+            <section id="more-portfolio">
                 <section class="column">
                     <h3>Quiz Game</h3>
-                    <a href="https://ptantsidis.github.io/scriptQuiz/"><img src="./assets/images/quiz_screen.png" class="image4" alt = "Quiz Game"></a>
+                    <a href="https://ptantsidis.github.io/scriptQuiz/"><img src="./assets/images/quiz_screen.png"
+                            class="image4" alt="Quiz Game"></a>
                 </section>
                 <section class="column">
                     <h3>Appointments</h3>
-                    <a href="https://ptantsidis.github.io/Appointments/"><img src="./assets/images/AppointmentScreenShot.png" class="image5" alt="Appoinments"></a>   
+                    <a href="https://ptantsidis.github.io/Appointments/"><img
+                            src="./assets/images/AppointmentScreenShot.png" class="image5" alt="Appoinments"></a>
                 </section>
                 <section class="column">
                     <h3>WeatherBoard</h3>
-                    <a href="https://ptantsidis.github.io/WeatherBoard/"><img src="./assets/images/WeatherBoardPic.png"class="image6" alt = "Landing Page"></a>  
-                </section>            
-            </section>	
+                    <a href="https://ptantsidis.github.io/WeatherBoard/"><img src="./assets/images/WeatherBoardPic.png"
+                            class="image6" alt="Landing Page"></a>
+                </section>
+            </section>
         </row>
-        <section id="contact"> 
+        <section class="container">
+            <h2>Contact Me</h2>
+           </section>
+        <section id="contact">
             <form>
                 <h4>Contact Me</h4>
                 <label for="name">Name:</label>
@@ -77,7 +94,7 @@
                 <button id="submit" value="Send">Submit</button>
             </form>
         </section>
-	</main>    
+    </main>
     <footer>
         <h5>©Step Up Productions Inc.</h5>
     </footer>
@@ -86,4 +103,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
+
 </html>
