--- a/index.html
+++ b/index.html
@@ -84,13 +84,20 @@
            </section>
         <section id="contact">
             <form>
-                <h4>Contact Me</h4>
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="Name">
-                <label for="email">Email:</label>
-                <input type="text" id="email" name="Email">
-                <label for="message">Message:</label>
-                <textarea name="message"></textarea>
+                <div class="form-item">
+                    <div class="form-group">
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="Name">
+                    </div>
+                     <div class="form-group">
+                        <label for="email">Email:</label>
+                        <input type="text" id="email" name="Email">
+                     </div>
+                    <div class="form-group">
+                        <label for="message">Message:</label>
+                        <input type="text" id="message" name="Message">                       
+                    </div>
+                </div>
                 <button id="submit" value="Send">Submit</button>
             </form>
         </section>
