--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
                     <li>Baan LN Infor, BOI, DDC, supply chain, manufacturing, master data integration, security, development,
                         administrative, training, implementation and consulting.</li> 
                     <li>Specializing in Aerospace and Defense with experience in automotive, and nutraceuticals.</li>
-                    <li>With many years of Systems Analysis and Programming in proprietary languages this becomes a well
-                        experienced technical expert. </li>
+                    <li>Systems Analyst and Programmer adding Full Stack Developer to this already experienced technical expert.</li>
+                    <li><a href="https://www.linkedin.com/in/phil-tantsidis-0813ba/">LinkedIn Profile</a></li>
+
                 </ul>
             </container>    
         </section>
@@ -49,29 +50,31 @@
                         alt="My First Page"></a>
             </section>
             <section class="column">
-                <h3>A Refactored Site</h3>
-                <a href="https://ptantsidis.github.io/Refactor2/"><img src="./assets/images/refactor_pic.png"
-                        class="image" alt="Refactor Page"></a>
-            </section>
+                <h3>Quiz Game</h3>
+                <a href="https://ptantsidis.github.io/scriptQuiz/"><img src="./assets/images/GameQuiz.png"
+                        class="image2" alt="Quiz Game"></a>
+            </section>         
             <section class="column">
                 <h3>A Landing Page</h3>
                 <a href="https://ptantsidis.github.io/Landing-Page/"><img src="./assets/images/landing_page.png"
-                        class="image" alt="Landing Page"></a>
+                        class="image3" alt="Landing Page"></a>
             </section>
+            
         </section>
         <row class="as-we-grow">
             <h3>As we grow!</h3>
             <section id="more-portfolio">
                 <section class="column">
-                    <h3>Quiz Game</h3>
-                    <a href="https://ptantsidis.github.io/scriptQuiz/"><img src="./assets/images/quiz_screen.png"
-                            class="image4" alt="Quiz Game"></a>
-                </section>
-                <section class="column">
                     <h3>Appointments</h3>
                     <a href="https://ptantsidis.github.io/Appointments/"><img
-                            src="./assets/images/AppointmentScreenShot.png" class="image5" alt="Appoinments"></a>
+                            src="./assets/images/AppointmentScreenShot.png" class="image4" alt="Appoinments"></a>
                 </section>
+                <section class="column">
+                    <h3>Team Generator</h3>
+                    <a href="https://watch.screencastify.com/v/uPoyaVMzAM5mc9VgRn7Q "><img src="./assets/images/myTeam.png"
+                            class="image5" alt="Landing Page"></a>
+                </section> 
+                
                 <section class="column">
                     <h3>WeatherBoard</h3>
                     <a href="https://ptantsidis.github.io/WeatherBoard/"><img src="./assets/images/WeatherBoardPic.png"
