minor alt changes

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
                 <section class="column">
                     <h3>Team Generator</h3>
                     <a href="https://watch.screencastify.com/v/uPoyaVMzAM5mc9VgRn7Q "><img src="./assets/images/myTeam.png"
-                            class="image5" alt="Landing Page"></a>
+                            class="image5" alt="MyTeamGenerator"></a>
                 </section> 
                 
                 <section class="column">
                     <h3>WeatherBoard</h3>
                     <a href="https://ptantsidis.github.io/WeatherBoard/"><img src="./assets/images/WeatherBoardPic.png"
-                            class="image6" alt="Landing Page"></a>
+                            class="image6" alt="WeatherBoard"></a>
                 </section>
             </section>
         </row>
