--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <li>Specializing in Aerospace and Defense with experience in automotive, and nutraceuticals.</li>
                     <li>Systems Analyst and Programmer adding Full Stack Developer to this already experienced technical expert.</li>
                     <li><a href="https://www.linkedin.com/in/phil-tantsidis-0813ba/">LinkedIn Profile</a></li>
+                    <li><a href="./assets/images/Tantsidis.doc">Resume</a></li>
 
                 </ul>
             </container>    
@@ -45,13 +46,13 @@
         <section id="portfolio">
 
             <section class="column">
-                <h3>My First Page</h3>
-                <a href="./assets/images/bonham.html"><img src="./assets/images/220pxJB75.jpg" class="image1"
-                        alt="My First Page"></a>
+                <h3>Movies Pal - Collaboration</h3>
+                <a href="https://altugcakmakci.github.io/movie_pal/"><img src="./assets/images/moviepal.png" class="image1"
+                        alt="Movie Pal"></a>
             </section>
             <section class="column">
-                <h3>Quiz Game</h3>
-                <a href="https://ptantsidis.github.io/scriptQuiz/"><img src="./assets/images/GameQuiz.png"
+                <h3>NFT Collect - Collaboration</h3>
+                <a href="https://nftc-collect.herokuapp.com/"><img src="./assets/images/ntfc_image.png"
                         class="image2" alt="Quiz Game"></a>
             </section>         
             <section class="column">
@@ -65,9 +66,9 @@
             <h3>As we grow!</h3>
             <section id="more-portfolio">
                 <section class="column">
-                    <h3>Appointments</h3>
-                    <a href="https://ptantsidis.github.io/Appointments/"><img
-                            src="./assets/images/AppointmentScreenShot.png" class="image4" alt="Appoinments"></a>
+                    <h3>Talking the Tech Blog</h3>
+                    <a href=" https://ptantsidis.github.io/techBlog/"><img
+                            src="./assets/images/blogShot.png" class="image4" alt="techBlog"></a>
                 </section>
                 <section class="column">
                     <h3>Team Generator</h3>
@@ -90,15 +91,15 @@
                 <div class="form-item">
                     <div class="form-group">
                         <label for="name">Name:</label>
-                        <input type="text" id="name" name="Name">
+                        <input type="text" id="name" name="Name"  placeholder="Phil Tantsidis">
                     </div>
                      <div class="form-group">
                         <label for="email">Email:</label>
-                        <input type="text" id="email" name="Email">
+                        <input type="text" id="email" name="Email" placeholder="ptantsidis@hotmail.com">
                      </div>
                     <div class="form-group">
                         <label for="message">Message:</label>
-                        <input type="text" id="message" name="Message">                       
+                        <input type="text" id="message" name="Message" placeholder="Anytime - 705-791-9456">                      
                     </div>
                 </div>
                 <button id="submit" value="Send">Submit</button>
